--- a/public/app.css
+++ b/public/app.css
@@ -30,3 +30,9 @@
 .logs .entry:hover {
     background-color: #3d3d3d;
 }
+
+.page-loading {
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+}
