--- a/public/app.css
+++ b/public/app.css
@@ -36,6 +36,10 @@
     background-color: #8B0000;
 }
 
+.logs .entry.focused {
+    background-color: #3d3d3d;
+}
+
 .logs .entry:hover {
     background-color: #3d3d3d;
 }
