Change font preference.

--- a/public/app.css
+++ b/public/app.css
@@ -2,7 +2,7 @@
 }
 
 .logs .entry {
-    font-family: "Courier", "Courier New";
+    font-family: "Courier New", "Courier";
     font-size: 10px;
 }
 
